style.css
body {
  margin: 0px;
  background-color: #777;
}

header {  
  color: #0099FF;
  padding: 20px 0 20px 0
}

header h1 {
  font-size: 50px;
  text-align: center;
  margin: 0px;
}

header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex; 
  list-style: none;
  padding-left: 0; /* removes default ul padding */
}

header nav ul li { 
  font-size: 24px;  
  margin: 0px 20px 0px 0px
}

header a:visited {
  color: #0099FF
}

/* Removes the margin to the right of the last li 
     so that the nav appears centered. */

header nav ul li:last-child {
  margin-right: 0
}

@media all and (min-width: 800px) {
  header {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
  }

  header h1 {
    margin: 14px 0;
  }

  header nav {
    margin-top: 8px
  }

  header nav ul {
    align-items: center 
  }

  header nav ul li {
    padding-left: 15px;
  }
  
}
/* END HEADER */



/* BEGIN MAIN */

/* Mobile-first responsive flexbox */

main {
  margin: 0px
}

section {
  background-color: #999999;
}

.group {  
  display: flex;
  flex-direction: column;
  margin: 0px;
}

.item {
  flex: 1;
}

.item-double {
  flex: 2
}

img {
  width: 100%;
}

h1 {
  padding-left: 5%;
  font-size: 30px
}

h2{
  padding-left: 5%;
}

p {
  padding-left: 5%;
  padding-right: 5%;
  font-size: 18px
}

.quote {
  padding-top: 5%;
  padding-left: 10%;
  padding-right: 10%;
}

.indent {
  padding-left: 15%
}


/* for larger screens */

@media all and (min-width: 800px) {
  main section {
    padding: 0 5%
  }

  main p{
    font-size: 18px
  }

  .group {
    flex-direction: row;
  }

  img {
    padding-top: 32px;
    padding-bottom: 32px
  }
}

@media all and (min-width: 925px) {
  main section {
    padding: 0 7.5%
  }

  h2 {
    font-size: 24px
  }

  main p {
    font-size: 20px
  }

  .group {
    flex-direction: row;
  }

  img {
    padding-top: 32px
  }
}

@media all and (min-width: 1050px) {
  main section {
    padding: 0 10%
  }

  main h1 {
    font-size: 36px;
  }

  main h2 {
      font-size: 28px
  }

  main p {
    font-size: 22px
  }
}

@media all and (min-width: 1350px) {
  main section {
    padding: 0 12.5%
  }

  main h1 {
    font-size: 40px;
  }

  main h2 {
    32px
  }

  main p {
    font-size: 26px
  }
}

/* END MAIN */

/* BEGIN FOOTER */

footer h4 {
  color: black;
}

footer p {
    font-size: 20px;
    text-align: center
}

form input{
  width: 100%
}

form textarea {
  width: 100%;
  height: 4.5rem;
}

/* these are for making my links change color in
    response to user input */
a {
  text-decoration: none
}
a:link {color: #99ffff}
a:visited {color: darkblue}
a:hover {color: yellow}

/* for browsers larger than 600px */

